--- a/src/variables.module.scss
+++ b/src/variables.module.scss
@@ -1,6 +1,8 @@
 // Colors
 $primary-purple: #7438E2;
+$background-color: #f2f1f5;
 
 :export {
   primaryPurple: $primary-purple;
+  backgroundColor: $background-color;
 }
