--- a/src/variables.module.scss
+++ b/src/variables.module.scss
@@ -1,6 +1,8 @@
 // Colors
 $primary-purple: #7438E2;
+$background-purple: #8e5ee6;
 
 :export {
   primaryPurple: $primary-purple;
+  backgroundPurple: $background-purple;
 }
