--- a/src/features/home/home_screen.scss
+++ b/src/features/home/home_screen.scss
@@ -3,3 +3,9 @@
 body {
   background-color: $background-color;
 }
+
+#home-content {
+  margin-top: 80px;
+  margin-inline: 40px;
+  padding-top: 10px;
+}
